@@ -3,6 +3,7 @@
 	* vc-hooks.el (vc-find-file-hook), 
 	vc-dispatcher.el (vc-resynch-window): Decouple vc-dispatcher
 	further from vc.el.
+	* vc.el (vc-dir-mode): Move VC-specific context menu entries here.
 
 2008-05-06 Wilson Snyder <wsnyder@wsnyder.org>
 
